--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,4 @@ jobs:
     - uses: actions/checkout@v2
     - uses: alexandregv/norminette-action@v3
       with:
-        flags: 'srcs includes libs/libft'
+        flags: 'srcs srcs_bonus includes libs/libft'
